--- a/ShoeStore/ShoeStore.csproj
+++ b/ShoeStore/ShoeStore.csproj
@@ -8,6 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\FilterBrandVisibility.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\FilterBrandVisibility.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\FilterBrandVisibility.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
