--- a/ShoeStore.DataAccess/ShoeStore.DataAccess.csproj
+++ b/ShoeStore.DataAccess/ShoeStore.DataAccess.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\ShoeStore.Models\ShoeStore.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
